# VoxelBuilderDemo

./: .gitattributes  .gitignore  notes.md  pyproject.toml  readme.md
gh/: Untitled.3dm  read_point_lists(1)(1).gh  read_point_lists(1).gh  read_point_lists.gh  read_point_lists2.gh  read_point_lists3 2.gh  read_point_lists4.gh  read_point_lists4_volumetric.gh  read_point_lists_rhino.3dm  read_point_lists_rhino.3dm.rhl  read_point_lists_rhino_.3dm  read_point_lists_rhino_.3dm.rhl  test_rhino_view.ghx
scr/: agent_algorithms.py  agent_algorithms_setup_2.py  agent_algorithms_setup_3.py  agent_algorithms_setup_4b.py  agent_algorithms_setup_4c_higher_reset.py  agent_algorithms_setup_5_reset.py  agent_algorithms_setup_6_moisture.py  algoritm_7.py  class_agent.py  class_layer.py  compas_view_1.py  compas_view_2.py  helpers.py  main.py  main_agents.py  main_agents_around_queen.py  main_agents_build_prob.py  main_build_and_erase_by_chance.py  main_test.py  math_functions.py  plot_voxel.py  read_json.py  show_voxel_plt.py  test_concept_algorithm.py  test_layer_manipulation.py  test_main_1.py  test_voxel_nbs.py  view.py  viewers.py  voxel_builder_library.py  voxel_like_objects.py
scr/agent_algorithms/: agent_algorithms_setup_3_default.py  test.py  (+3 more)
voxelbuilderdemo/: __init__.py  agent_algorithms_setup_5_reset.py  agent_algorithms_setup_5_test.py  agent_algorithms_setup_6_moisture.py  algoritm_7.py  class_agent.py  class_layer.py  compas_view_2.py  helpers.py  main.py  math_functions.py  plot_scatter.py  plot_voxel.py  show_voxel_plt.py  test_code.py  voxel_builder_library.py
(+401 files in other folders)
