[tool.poetry]
name = "voxelbuilderdemo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
scipy = "*"
compas = "^2.3.0"
compas-view2 = "*"

[tool.poetry.group.dev.dependencies]
pytest-ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
